@@ -7,18 +7,32 @@
 
 package org.elasticsearch.xpack.ml.dataframe.inference;
 
+import org.apache.lucene.search.TotalHits;
 import org.elasticsearch.ElasticsearchException;
+import org.elasticsearch.action.ActionFuture;
+import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.action.DocWriteRequest;
 import org.elasticsearch.action.bulk.BulkRequest;
 import org.elasticsearch.action.index.IndexRequest;
+import org.elasticsearch.action.search.SearchResponse;
+import org.elasticsearch.action.search.ShardSearchFailure;
+import org.elasticsearch.action.support.PlainActionFuture;
 import org.elasticsearch.client.internal.Client;
 import org.elasticsearch.common.bytes.BytesReference;
 import org.elasticsearch.common.settings.Settings;
+import org.elasticsearch.common.util.concurrent.ThreadContext;
 import org.elasticsearch.inference.InferenceResults;
+import org.elasticsearch.search.DocValueFormat;
 import org.elasticsearch.search.SearchHit;
+import org.elasticsearch.search.SearchHits;
 import org.elasticsearch.search.SearchResponseUtils;
+import org.elasticsearch.search.aggregations.InternalAggregations;
+import org.elasticsearch.search.aggregations.metrics.Max;
+import org.elasticsearch.search.profile.SearchProfileResults;
+import org.elasticsearch.search.suggest.Suggest;
 import org.elasticsearch.tasks.TaskId;
 import org.elasticsearch.test.ESTestCase;
+import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.xcontent.XContentBuilder;
 import org.elasticsearch.xcontent.XContentFactory;
 import org.elasticsearch.xpack.core.ml.dataframe.DataFrameAnalyticsConfig;
@@ -28,7 +42,7 @@ import org.elasticsearch.xpack.core.ml.dataframe.analyses.RegressionTests;
 import org.elasticsearch.xpack.core.ml.dataframe.stats.common.DataCounts;
 import org.elasticsearch.xpack.core.ml.inference.results.ClassificationInferenceResults;
 import org.elasticsearch.xpack.core.ml.inference.trainedmodel.ClassificationConfig;
-import org.elasticsearch.xpack.core.ml.inference.trainedmodel.InferenceConfig;
+import org.elasticsearch.xpack.ml.dataframe.DestinationIndex;
 import org.elasticsearch.xpack.ml.dataframe.stats.DataCountsTracker;
 import org.elasticsearch.xpack.ml.dataframe.stats.ProgressTracker;
 import org.elasticsearch.xpack.ml.extractor.ExtractedFields;
@@ -42,16 +56,18 @@ import org.mockito.Mockito;
 
 import java.io.IOException;
 import java.util.ArrayDeque;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.ArrayList;
 import java.util.Deque;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
+import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
 import static org.hamcrest.Matchers.equalTo;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -67,7 +83,7 @@ public class InferenceRunnerTests extends ESTestCase {
 
     @Before
     public void setupTests() {
-        client = mock(Client.class);
+        client = mockClient();
         resultsPersisterService = mock(ResultsPersisterService.class);
         config = new DataFrameAnalyticsConfig.Builder().setId("test")
             .setAnalysis(RegressionTests.createRandom())
@@ -80,32 +96,28 @@ public class InferenceRunnerTests extends ESTestCase {
     }
 
     public void testInferTestDocs() {
-        ExtractedFields extractedFields = new ExtractedFields(
-            Collections.singletonList(new SourceField("key", Collections.singleton("integer"))),
-            Collections.emptyList(),
-            Collections.emptyMap()
-        );
+        var extractedFields = new ExtractedFields(List.of(new SourceField("key", Set.of("integer"))), List.of(), Map.of());
 
-        Map<String, Object> doc1 = new HashMap<>();
-        doc1.put("key", 1);
-        Map<String, Object> doc2 = new HashMap<>();
-        doc2.put("key", 2);
-        TestDocsIterator testDocsIterator = mock(TestDocsIterator.class);
+        var testDocsIterator = mock(TestDocsIterator.class);
         when(testDocsIterator.hasNext()).thenReturn(true, false);
-        when(testDocsIterator.next()).thenReturn(buildSearchHits(Arrays.asList(doc1, doc2)));
+        when(testDocsIterator.next()).thenReturn(buildSearchHits(List.of(Map.of("key", 1), Map.of("key", 2))));
         when(testDocsIterator.getTotalHits()).thenReturn(2L);
-        InferenceConfig config = ClassificationConfig.EMPTY_PARAMS;
+        var config = ClassificationConfig.EMPTY_PARAMS;
 
-        LocalModel localModel = localModelInferences(
-            new ClassificationInferenceResults(1.0, "foo", Collections.emptyList(), Collections.emptyList(), config, 1.0, 1.0),
-            new ClassificationInferenceResults(0.0, "bar", Collections.emptyList(), Collections.emptyList(), config, .5, .7)
+        var localModel = localModelInferences(
+            new ClassificationInferenceResults(1.0, "foo", List.of(), List.of(), config, 1.0, 1.0),
+            new ClassificationInferenceResults(0.0, "bar", List.of(), List.of(), config, .5, .7)
         );
 
-        InferenceRunner inferenceRunner = createInferenceRunner(extractedFields);
+        doAnswer(ans -> {
+            ActionListener<LocalModel> responseListener = ans.getArgument(1);
+            responseListener.onResponse(localModel);
+            return null;
+        }).when(modelLoadingService).getModelForInternalInference(anyString(), any());
 
-        inferenceRunner.inferTestDocs(localModel, testDocsIterator, 0L);
+        createInferenceRunner(extractedFields, testDocsIterator).run("model id");
 
-        ArgumentCaptor<BulkRequest> argumentCaptor = ArgumentCaptor.forClass(BulkRequest.class);
+        var argumentCaptor = ArgumentCaptor.forClass(BulkRequest.class);
 
         verify(resultsPersisterService).bulkIndexWithHeadersWithRetry(any(), argumentCaptor.capture(), any(), any(), any());
         assertThat(progressTracker.getInferenceProgressPercent(), equalTo(100));
@@ -115,23 +127,14 @@ public class InferenceRunnerTests extends ESTestCase {
         Map<String, Object> doc1Source = ((IndexRequest) indexRequests.get(0)).sourceAsMap();
         Map<String, Object> doc2Source = ((IndexRequest) indexRequests.get(1)).sourceAsMap();
 
-        assertThat(doc1Source.get("test_results_field"), equalTo(new HashMap<>() {
-            {
-                put("predicted_value", "foo");
-                put("prediction_probability", 1.0);
-                put("prediction_score", 1.0);
-                put("predicted_value", "foo");
-                put("is_training", false);
-            }
-        }));
-        assertThat(doc2Source.get("test_results_field"), equalTo(new HashMap<>() {
-            {
-                put("predicted_value", "bar");
-                put("prediction_probability", 0.5);
-                put("prediction_score", .7);
-                put("is_training", false);
-            }
-        }));
+        assertThat(
+            doc1Source.get("test_results_field"),
+            equalTo(Map.of("predicted_value", "foo", "prediction_probability", 1.0, "prediction_score", 1.0, "is_training", false))
+        );
+        assertThat(
+            doc2Source.get("test_results_field"),
+            equalTo(Map.of("predicted_value", "bar", "prediction_probability", 0.5, "prediction_score", .7, "is_training", false))
+        );
     }
 
     public void testInferTestDocs_GivenCancelWasCalled() {
@@ -141,10 +144,10 @@ public class InferenceRunnerTests extends ESTestCase {
         TestDocsIterator infiniteDocsIterator = mock(TestDocsIterator.class);
         when(infiniteDocsIterator.hasNext()).thenReturn(true);
 
-        InferenceRunner inferenceRunner = createInferenceRunner(extractedFields);
+        InferenceRunner inferenceRunner = createInferenceRunner(extractedFields, infiniteDocsIterator);
         inferenceRunner.cancel();
 
-        inferenceRunner.inferTestDocs(localModel, infiniteDocsIterator, 0L);
+        inferenceRunner.run("model id");
 
         Mockito.verifyNoMoreInteractions(localModel, resultsPersisterService);
         assertThat(progressTracker.getInferenceProgressPercent(), equalTo(0));
@@ -152,7 +155,7 @@ public class InferenceRunnerTests extends ESTestCase {
 
     private static Deque<SearchHit> buildSearchHits(List<Map<String, Object>> vals) {
         return vals.stream().map(InferenceRunnerTests::fromMap).map(reference -> {
-            var pooled = SearchResponseUtils.searchHitFromMap(Collections.singletonMap("_source", reference));
+            var pooled = SearchResponseUtils.searchHitFromMap(Map.of("_source", reference));
             try {
                 return pooled.asUnpooled();
             } finally {
@@ -175,7 +178,7 @@ public class InferenceRunnerTests extends ESTestCase {
         return localModel;
     }
 
-    private InferenceRunner createInferenceRunner(ExtractedFields extractedFields) {
+    private InferenceRunner createInferenceRunner(ExtractedFields extractedFields, TestDocsIterator testDocsIterator) {
         return new InferenceRunner(
             Settings.EMPTY,
             client,
@@ -185,7 +188,62 @@ public class InferenceRunnerTests extends ESTestCase {
             config,
             extractedFields,
             progressTracker,
-            new DataCountsTracker(new DataCounts(config.getId()))
+            new DataCountsTracker(new DataCounts(config.getId())),
+            id -> testDocsIterator
         );
+    }
+
+    private Client mockClient() {
+        var client = mock(Client.class);
+        var threadpool = mock(ThreadPool.class);
+        when(threadpool.getThreadContext()).thenReturn(new ThreadContext(Settings.EMPTY));
+        when(client.threadPool()).thenReturn(threadpool);
+
+        Supplier<SearchResponse> withHits = () -> new SearchResponse(
+            SearchHits.unpooled(new SearchHit[] { SearchHit.unpooled(1) }, new TotalHits(1L, TotalHits.Relation.EQUAL_TO), 1.0f),
+            InternalAggregations.from(List.of(new Max(DestinationIndex.INCREMENTAL_ID, 1, DocValueFormat.RAW, Map.of()))),
+            new Suggest(new ArrayList<>()),
+            false,
+            false,
+            new SearchProfileResults(Map.of()),
+            1,
+            "",
+            1,
+            1,
+            0,
+            0,
+            ShardSearchFailure.EMPTY_ARRAY,
+            SearchResponse.Clusters.EMPTY
+        );
+        Supplier<SearchResponse> withNoHits = () -> new SearchResponse(
+            SearchHits.EMPTY_WITH_TOTAL_HITS,
+            // Simulate completely null aggs
+            null,
+            new Suggest(new ArrayList<>()),
+            false,
+            false,
+            new SearchProfileResults(Map.of()),
+            1,
+            "",
+            1,
+            1,
+            0,
+            0,
+            ShardSearchFailure.EMPTY_ARRAY,
+            SearchResponse.Clusters.EMPTY
+        );
+
+        when(client.search(any())).thenReturn(response(withHits)).thenReturn(response(withNoHits));
+        return client;
+    }
+
+    // we only expect to call actionGet, calling other API will hang indefinitely
+    private static ActionFuture<SearchResponse> response(Supplier<SearchResponse> searchResponse) {
+        return new PlainActionFuture<>() {
+            @Override
+            public SearchResponse actionGet() {
+                return searchResponse.get();
+            }
+        };
     }
 }
